Added pizza recipe
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                             </ol>
                         </div>
                     </div>
-                    <!--<div class = 'recipe'>
+                    <div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/savory/pizza.jpg' />
                             <div>
@@ -674,20 +674,111 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
-                                <li> TODO </li>
+                                <li> 1x Pizza Stone </li>
+                                <li> 765g Room Temp Water </li>
+                                <li> 2 tspn Active Dry Yeast </li>
+                                <li> 1275g Bread Flour </li>
+                                <li> ⅓ cup Olive Oil </li>
+                                <li> 4 tsp Salt </li>
+                                <li> 4 tsp Sugar </li>
+                                <li>
+                                    Rao's Pizza Sauce (There's no need to make your own when
+                                    Rao's is so good!)
+                                </li>
+                                <li> ½x Large Tomato </li>
+                                <li> 1x 8oz Sliced Fresh Mozzarella </li>
+                                <li> 4x Large Slices Pepperoni </li>
+                                <li> 1 handful Basil </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
                                 <li>
-                                    TODO
+                                    Make the Dough (Day or Two Before Everything Else)
+                                    - Makes 8 Pizzas
 
                                     <ol type = 'a'>
-                                        <li> TODO </li>
+                                        <li>
+                                            Add yeast to the room temp water in a large bowl, and
+                                            set aside.
+                                        </li>
+                                        <li> In another large bowl, weigh out the flour. </li>
+                                        <li> Add olive oil to the water and yeast. </li>
+                                        <li> Pour flour into mixture and begin to hand mix. </li>
+                                        <li>
+                                            Add salt half-way through to avoid killing the yeast.
+                                        </li>
+                                        <li> Knead until reasonably together. </li>
+                                        <li> Place into ziplock bag and seal. </li>
+                                        <li>
+                                            Place in fridge and wait to ferment for 12-36 hrs.
+                                        </li>
+                                        <li>
+                                            After fermentation, cut into 8 pieces and place in
+                                            an airtight container. They will last for up to a week.
+                                        </li>
                                     </ol>
                                 </li>
+                                <li>
+                                    Prep
+
+                                    <ol type = 'a'>
+                                        <li> Preheat oven with Pizza stone inside to 550⁰F. </li>
+                                        <li> Slice tomato. </li>
+                                        <li> Set out one thing of dough for at least 2 hours. </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Pound and Stretch the Dough
+
+                                    <ul>
+                                        <li>
+                                            Watch
+                                            <a href =
+                                                    'https://www.youtube.com/watch?v=9f9-xTcKzZo'>
+                                                this great video
+                                            </a>
+                                            on how to stretch the dough.
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    Assemble your Pizza
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Apply a generous amount of the Rao's pizza sauce to
+                                            your dough.
+                                        </li>
+                                        <li>
+                                            Place tomato slices on top of the sauce.
+                                        </li>
+                                        <li>
+                                            Place the mozzarella on top of the tomatoes and sauce.
+                                            Save a bit for later.
+                                        </li>
+                                        <li> Place the basil down now. </li>
+                                        <li>
+                                            Place the pepperonis down. Use that extra cheese to
+                                            cover the basil a little so the pepperonis will stick
+                                            when it melts.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Cook the pizza.
+
+                                    <ul>
+                                        <li>
+                                            Stick the pizza in the oven on the pizza stone,
+                                            and cook until the crust rises and
+                                            turns a golden brown (~10min at 550⁰ or ~15 at 500⁰).
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li> Enjoy! </li>
                             </ol>
                         </div>
-                    </div>-->
+                    </div>
                     <!--<div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/savory/steak.jpg' />
@@ -1119,6 +1210,7 @@
                                 <li> Enjoy! </li>
                             </ol>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
