Add steak recipe
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
                             </ol>
                         </div>
                     </div>
-                    <!--<div class = 'recipe'>
+                    <div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/savory/steak.jpg' />
                             <div>
@@ -795,20 +795,102 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
-                                <li> TODO </li>
+                                <li> 1x Center Cut 1½" Thick USDA Prime Tenderloin </li>
+                                <li> 1 tbsp Sea Salt </li>
+                                <li> 1 tbsp Ground Black Pepper </li>
+                                <li> ¼ tspn MSG </li>
+                                <li> 1 tbsp Lime Juice </li>
+                                <li> 4x Sticks Fresh Thyme (Yes, fresh! NOT GROUND!) </li>
+                                <li> 3x tbspn Butter </li>
+                                <li> 2 tbspn Avacado Oil </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
                                 <li>
-                                    TODO
+                                    Prep the Meat
 
                                     <ol type = 'a'>
-                                        <li> TODO </li>
+                                        <li> Preheat the oven to a low temp, 250⁰F </li>
+                                        <li> Let the meat achieve room temperature. </li>
+                                        <li> Dry the meat well with a paper towel. </li>
+                                        <li>
+                                            Covering the meat with another paper towel,
+                                            lightly hit the meat over and over again with the
+                                            flat side of a meat tenderizer.
+                                        </li>
+                                        <li>
+                                            Generously coat the steak with the salt, pepper, and
+                                            MSG.
+                                        </li>
+                                        <li>
+                                            Add ½ tbspn Lime Juice to one side of the steak.
+                                            Rub it and the seasonings in generously.
+                                        </li>
+                                        <li>
+                                            Add ½ tbspn Lime Juice to the other side and rub.
+                                        </li>
                                     </ol>
                                 </li>
+                                <li>
+                                    Cook the Meat Internally
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Place the steak on parchment paper on a baking sheet.
+                                        </li>
+                                        <li>
+                                            Place the steak in the preheated oven and cook for
+                                            15min.
+                                        </li>
+                                        <li> Flip the steak over and cook another 10 minutes </li>
+                                        <li>
+                                            When you get to around 2 minutes left, begin heating
+                                            a pan on medium high temperature.
+                                        </li>
+                                        <li>
+                                            Check the temperature. You should be ~15-25⁰F below
+                                            Medium-Rare (110-120⁰F).
+                                            If not, give it another 5 min or so.
+                                            If still not, do 1 minute increments.
+                                        </li>
+                                        <li> Remove from the Oven </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Sear the Steak
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            With the pan hot, pour in the avacado oil and allow to
+                                            heat and shimmer.
+                                        </li>
+                                        <li> Place the steak in the oil. Wait 3 minutes. </li>
+                                        <li>
+                                            With thongs, flip the steak over and cook another
+                                            minute.
+                                        </li>
+                                        <li>
+                                            Add the butter around the steak and the time.
+                                            Once melted, begin basting.
+                                        </li>
+                                        <li>
+                                            Baste and cook for another minute and check the temp.
+                                            Cook and baste until at medium-rare (135⁰F).
+                                        </li>
+                                        <li>
+                                            With thongs, flip the steak to its side and sear the
+                                            edges.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Let the steak soak and finish tenderizing for 5min while
+                                    wrapped in foil.
+                                </li>
+                                <li> Enjoy! </li>
                             </ol>
                         </div>
-                    </div>-->
+                    </div>
                     <!--<div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/savory/tortilla.jpg' />
