Added medovik recipe
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -926,16 +926,22 @@
                 <img src = './img/food/sweet/tiramisu.jpg' />
                 <button type = 'button' class = 'collapsible'> ▶ Sweet Recipes </button>
                 <div class = 'content'>
-                    <!--<div class = 'recipe'>
+                    <div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/sweet/medivnyk.jpg' />
                             <div>
                                 <h1> Medovik/Medivnyk </h1>
                                 <p>
-                                    A dessert originating in Ukraine, the Medivnyk is all about
-                                    honey. Layers of honey-based pastry soaked in cream make the
+                                    A Ukrainian dessert whose first mention stems from a
+                                    <a href =
+'https://www.themoscowtimes.com/2022/07/23/medovik-russias-famous-and-mysterious-honey-cake-a78387'
+                                    >
+                                        Soviet-era cookbook, "Ukrainian Dishes,"
+                                    </a>
+                                    the Medivnyk is all about honey.
+                                    Layers of honey-based pastry soaked in cream make the
                                     dish a sweet treat for any occasion. Be prepared though - this
-                                    recipe takes hours!
+                                    recipe takes &gt;3 hours (so so so worth it though)!
                                 </p>
                             </div>
                         </div>
@@ -943,20 +949,100 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
-                                <li> TODO </li>
+                                <li> 3 tbsps Raw Honey (Get the Good Stuff!) </li>
+                                <li> 2x 50g Butter </li>
+                                <li> 350g + 50g All-Purpose Flour </li>
+                                <li> 2x + 1x Eggs </li>
+                                <li> 1 cup + 1 cup Sugar </li>
+                                <li> 1 tspn Baking Soda </li>
+                                <li> 1 tspn Vanilla </li>
+                                <li> ½ cup + 2 cups Milk </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
                                 <li>
-                                    TODO
+                                    Make the Pastries
 
                                     <ol type = 'a'>
-                                        <li> TODO </li>
+                                        <li>
+                                            Melt honey, 50g butter, and 1 cup sugar via a water
+                                            bath
+                                        </li>
+                                        <li>
+                                            Add the baking soda and stir for another minute.
+                                        </li>
+                                        <li>
+                                            Set aside and let it cool for about 3 minutes.
+                                        </li>
+                                        <li>
+                                            Add 2 eggs to the mixture, stirring quickly with a
+                                            whisk and add 350g flour to avoid curdling.
+                                        </li>
+                                        <li> Stick in the freezer for 10 minutes. </li>
+                                        <li> Take out and divide into 8 equal parts. </li>
+                                        <li> Back in freezer for 5 minutes. </li>
+                                        <li> Preheat oven to 400⁰F </li>
+                                        <li>
+                                            Pull a ball out and roll it thin on a floured surface.
+                                        </li>
+                                        <li>
+                                            Use a pot lid to cut into a neat circle, saving the
+                                            trimmings.
+                                        </li>
+                                        <li>
+                                            Place in the oven for around 5 minutes. Should darken
+                                            a bit and rise when ready. Take out and poke holes in
+                                            it to absorb the cream later.
+                                        </li>
+                                        <li>
+                                            While one or two are cooking flatten and trim the next.
+                                            Repeat for all 8.
+                                        </li>
+                                        <li>
+                                            Lay out the trimmings flat on the baking sheet and cook
+                                            them too.
+                                        </li>
+                                        <li>
+                                            Grind the trimmings into crumbs.
+                                        </li>
                                     </ol>
                                 </li>
+                                <li>
+                                    Make the Gravy
+
+                                    <ol type = 'a'>
+                                        <li> Put 2 cup milk on heat to boil. </li>
+                                        <li>
+                                            Combine ½ cup of milk, 1 egg, 1 cup sugar, 50g butter,
+                                            and 50g flour in a separate bowl.
+                                        </li>
+                                        <li>
+                                            Pour egg batter into the warmed milk, and stir well.
+                                        </li>
+                                        <li> Heat and stir the mixture til it becomes dense. </li>
+                                        <li>
+                                            Add vanilla to the cream and set aside from the heat
+                                        </li>
+                                        <li> Chill the cream in the fridge. </li>
+                                        <li> Whip into a thin cream; not fully whipped. </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Make the Cake
+
+                                    <ol type = 'a'>
+                                        <li> Place down a pastry layer. </li>
+                                        <li> Coat it in cream. </li>
+                                        <li> Repeat for all 8 layers. </li>
+                                        <li> Pour all over to coat the whole cake. </li>
+                                        <li> Powder the cake with the crumbs. </li>
+                                        <li> Let sit in fridge overnight (at least 8 hours). </li>
+                                    </ol>
+                                </li>
+                                <li> Enjoy! </li>
                             </ol>
                         </div>
-                    </div>-->
+                    </div>
                     <div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/sweet/peach-cobbler.jpg' />
