Added tortilla recipe (end of initial recipes)
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
                             </ol>
                         </div>
                     </div>
-                    <!--<div class = 'recipe'>
+                    <div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/savory/tortilla.jpg' />
                             <div>
@@ -906,20 +906,70 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
-                                <li> TODO </li>
+                                <li> 3 cups All-Purpose Flour </li>
+                                <li> 2 tspns Baking Powder </li>
+                                <li> 1½ tspns Kosher Salt </li>
+                                <li> 5 tbsps Salted Butter (Room Temperature) </li>
+                                <li> 2 cups Hot Water </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
                                 <li>
-                                    TODO
+                                    Make the Dough
 
                                     <ol type = 'a'>
-                                        <li> TODO </li>
+                                        <li> Mix flour, baking powder, and salt. </li>
+                                        <li> Add butter. </li>
+                                        <li> Make a well and add 1 cup Hot Water. </li>
+                                        <li>
+                                            Fold the mixture over the water beginning to form
+                                            dough.
+                                        </li>
+                                        <li> Add the rest of the water and continue to stir. </li>
+                                        <li>
+                                            Once together, pull out and place on a floured surface.
+                                        </li>
+                                        <li>
+                                            Begin to kneed dough in your hands, periodically
+                                            adding flour until it just barely doesn't stick to
+                                            your hands.
+                                        </li>
+                                        <li>
+                                            Place dough ball under a damp cloth for 10 minutes.
+                                        </li>
                                     </ol>
                                 </li>
+                                <li>
+                                    Make the Tortillas
+
+                                    <ol type = 'a'>
+                                        <li> Begin to heat a pan over medium high heat. </li>
+                                        <li> Once hot add a small drizzle of oil. </li>
+                                        <li>
+                                            Cut the dough into 12 even wedges and roll them into
+                                            balls.
+                                        </li>
+                                        <li>
+                                            Use a rolling pin to roll out a ball.
+                                            You may have to roll out, wait, then roll again,
+                                            to really make sure the tortilla stays stretched.
+                                        </li>
+                                        <li>
+                                            Cook the tortilla in the pan for about 30-60 seconds,
+                                            until little bubbles appear.
+                                        </li>
+                                        <li>
+                                            Flip and cook another 30 seconds until the bottom is
+                                            slightly golden.
+                                        </li>
+                                        <li> Set on a plate and cover with a towel. </li>
+                                        <li> Repeat with all the dough. </li>
+                                    </ol>
+                                </li>
+                                <li> Enjoy! </li>
                             </ol>
                         </div>
-                    </div>-->
+                    </div>
                 </div>
             </div>
             <div class = 'section'>
