index: added blackberry cobbler text
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -1214,6 +1214,105 @@
                     </div>
                     <div class = 'recipe'>
                         <div class = 'recipehdr'>
+                            <img src = './img/food/sweet/blackberry-cobbler.jpg' />
+                            <div>
+                                <h1> Double-crusted Blackberry Cobbler </h1>
+                                <p>
+                                    More Texan than the Southerner's Peach Cobbler, the
+                                    blackberry cobbler is sure to knock your socks off.
+                                    Serve with the best ice-cream (Bluebell Homemade Vanilla).
+                                </p>
+                            </div>
+                        </div>
+                        <button type = 'button' class = 'collapsible'> ▶ View Recipe </button>
+                        <div class = 'content'>
+                            <p> Ingredients: </p>
+                            <ul>
+                                <li> 4 cups All-Purpose Flour </li>
+                                <li> 2 cup + ½ cup Pure White Cane Sugar </li>
+                                <li> 2 cups Brown Sugar </li>
+                                <li> 2 tspn Baking Powder </li>
+                                <li> 1 tspn Salt </li>
+                                <li> 1 cup Boiling Water </li>
+                                <li> 24 tbsps Room-temp Salted Butter </li>
+                                <li> 6 cups/30oz Fresh Blackberries </li>
+                                <li> 2 tspns Cornstarch </li>
+                                <li> ½ cup Melted Butter </li>
+                            </ul>
+                            <p> Steps </p>
+                            <ol>
+                                <li>
+                                    Create 1st Layer of Crust
+
+                                    <ol type = 'a'>
+                                        <li> Preheat oven to 350⁰F. </li>
+                                        <li>
+                                            Combine flour, 2 cup sugar, 2 cup brown sugar,
+                                            baking powder, and salt in a large bowl.
+                                        </li>
+                                        <li>
+                                            Add room-temp in butter in with hands or a flat
+                                            spatula.
+                                        </li>
+                                        <li>
+                                            Stir in the boiling water until combined. You
+                                            want just barely combined.
+                                        </li>
+                                        <li>
+                                            Layer <b> half </b> this crust in a 4-quart baking dish
+                                            and pre-cook it for 10 min. Leave the other half for
+                                            the top which we'll get to in a bit
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Prep Blackberries
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            In a small bowl (not your mixing bowl), combine ½ cup
+                                            sugar and the cornstarch together.
+                                        </li>
+                                        <li>
+                                            Put your blackberries in a mixing bowl and drizzle
+                                            with ½ cup melted butter.
+                                        </li>
+                                        <li>
+                                            Sprinkle the cornstarch + sugar over the blackberries
+                                            and toss. Mix well
+                                        </li>
+                                        <li>
+                                            Pour and even out over the crust from before.
+                                        </li>
+                                        <li>
+                                            Bake in the oven for 10 minutes.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Assemble the Cobbler
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Drop spoonfuls of the crust to cover the blackberries.
+                                            It will expand a bit, but you should try to cover
+                                            as much as possible.
+                                        </li>
+                                        <li>
+                                            Bake for 60 minutes until blackberries bubble and
+                                            the crust is a golden brown.
+                                        </li>
+                                        <li>
+                                            Serve with a scoop of Bluebell Homemade Vanilla.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li> Enjoy! </li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class = 'recipe'>
+                        <div class = 'recipehdr'>
                             <img src = './img/food/sweet/tiramisu.jpg' />
                             <div>
                                 <h1> Tiramisu </h1>
