index: increased blackberry amount and cook time
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -1235,7 +1235,7 @@
                                 <li> 1 tspn Salt </li>
                                 <li> 1 cup Boiling Water </li>
                                 <li> 24 tbsps Room-temp Salted Butter </li>
-                                <li> 6 cups/30oz Fresh Blackberries </li>
+                                <li> 12 cups/60oz Fresh Blackberries </li>
                                 <li> 2 tspns Cornstarch </li>
                                 <li> ½ cup Melted Butter </li>
                             </ul>
@@ -1285,7 +1285,7 @@
                                             Pour and even out over the crust from before.
                                         </li>
                                         <li>
-                                            Bake in the oven for 10 minutes.
+                                            Bake in the oven for 30 minutes.
                                         </li>
                                     </ol>
                                 </li>
@@ -1299,7 +1299,7 @@
                                             as much as possible.
                                         </li>
                                         <li>
-                                            Bake for 60 minutes until blackberries bubble and
+                                            Bake for 60 minutes or until blackberries bubble and
                                             the crust is a golden brown.
                                         </li>
                                         <li>
